# clover

./: .devcontainer.json  .editorconfig  .gitignore  Cargo.toml  DEV_SETUP.md  Dockerfile  README.md  devcontainers.json  west.yml
api/: flasherd.proto
boards/lpl/gnc_legacy/: CMakeLists.txt  Kconfig.throttle_legacy  board.cmake  board.yml  throttle_legacy.dts  throttle_legacy.yaml  throttle_legacy_defconfig
boards/lpl/hive/: Kconfig.throttle_legacy  board.yml  throttle_legacy.yaml
docs/: CP2102_Serial_Output.md  DEV_SETUP.md
drivers/blink/: Kconfig.gpio_led
flasherd/: Cargo.toml  README.md  build.rs  flasherd-proto-compiled.rs
flasherd-client/: Cargo.toml  build.rs
flasherd-client/src/: main.rs
flasherd/src/: flasherd.rs  flasherd_cleaner.rs  flasherd_service.rs  main.rs  pid_path.rs  server.rs
gnc/: CMakeLists.txt  prj.conf  sample.yaml
gnc/src/: CMakeLists.txt  main.cpp  pts.cpp  pts.h  sequencer.cpp  sequencer.h  server.cpp  server.h  servotesting.cpp  servotesting.h  throttle_valve.cpp  throttle_valve.h
gnc/src/guards/: SocketGuard.cpp  SocketGuard.h
hive/: CMakeLists.txt  Kconfig  debug.conf  prj.conf  sample.yaml
hive/src/: CMakeLists.txt
runners/: common.py  stm32cubeprogrammer_flasherd.py  tycmd_flasherd.py
scripts/: dev-container-init.sh  flasherd-connection-test.sh  throttle_graph.py
throttle/: CMakeLists.txt  Kconfig  prj.conf
throttle/boards/: teensy41.overlay
throttle/src/: CMakeLists.txt  Server.cpp  Server.h  ThrottleValve.cpp  ThrottleValve.h  main.c  main.cpp  pts.h  sequencer.cpp  sequencer.h  server.cpp  server.h  servotesting.cpp  servotesting.h  throttle_valve.cpp  throttle_valve.h
throttle/src/guards/: CMakeLists.txt  SocketGuard.cpp  SocketGuard.h
zephyr/: module.yml
(+28 files in other folders)
