[package]
name = "flasherd-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["fs", "macros", "net", "process", "rt", "rt-multi-thread", "sync"] }
tonic = "0.14.2"
prost = "0.14.1"
tokio-stream = "0.1.17"
futures = "0.3.31"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
