[package]
name = "flasherd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "flasherd"
path = "src/flasherd.rs"

[[bin]]
name = "flasherd_cleaner"
path = "src/flasherd_cleaner.rs"

[dependencies]
anyhow = "1.0.98"
dirs = "6.0.0"
log = "0.4.27"
simplelog = "0.12.2"
tokio = { version = "1.46.1", features = ["fs", "macros", "net", "process", "rt", "rt-multi-thread", "sync"] }
chrono = "0.4.42"
rand = "0.9.2"
rand_distr = "0.5.1"
tonic = "0.14.2"
prost = "0.14.1"
tokio-stream = "0.1.17"
tonic-prost = "0.14.2"
futures = "0.3.31"
sysinfo = { version = "0.37.2", features = ["windows"] }

[build-dependencies]
dirs = "6.0.0"
sysinfo = "0.37.2"
tonic-prost-build = "0.14.2"
which = "8.0.0"
